# mpc-competition

./: .gitignore  PROBLEM.md  README.md  flake.nix  index.html  leaderboard.json  pyproject.toml
.github/workflows/: evaluate.yml
evaluator/: evaluate.py  evaluate_all.py  problem.py  visualize.py  worker.py
submissions/: README.md  abhinav_pointsinthecloud.py  baseline.py  chintan.py  gpt.py  himaneesh.py  pranav.py  rishi.py  sohamsorzsoln.py  stupid.py
