[project]
name = "mpc-competition"
version = "0.1.0"
description = "GitHub Actions based MPC competition platform"
requires-python = ">=3.11"
dependencies = [
  "casadi>=3.7",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pillow>=10.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
markers = [
  "integration: tests that call external services or long running binaries",
]
addopts = "-m 'not integration'"
